$Date$

	
VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.10-4 (working)
       
	* fitted.cca, fitted.rda: gained agument type = "working" to get
	the fitted values and residuals used internally in calculation (to
	be used in plot.lm diagnostic plots residuals ~ fitted).
 	
Version 1.10-3 (closed Oct 2, 2007 at Rev. 62)

	* doc: added vignettes intro-vegan on ordination methods and
	diversity-vegan.

	* Trellis graphics for ordination objects with functions
	ordixyplot, ordicloud and ordisplom. These functions are still
	unsatisfactory. In particular, I haven't found a clean way of
	having biplot arrows in the graphs (how do you know the
	coordinates and the axes used?). Contributions are welcome.

	* ordispantree made dysfunctional (deprecated in 1.8-1). 
	
Version 1.10-2 (closed Sep 14, 2007 at Rev. 36)

	* vegandocs: added FAQ-vegan, and renamed the old vegan-FAQ to
	decision-vegan. Only primary sources (texi, Rnw) in the source
	repository: derived files (.tex, .pdf) should be made when package
	is built.
	
	* CCorA: Pierre Legendre's functions for Canonical Correlation
	Analysis. These provide a more robust alternative to the standard
	cancor() in base R. (under work)
		
	* scores.default: handles numeric data frames.
	
Version 1.10-1 (closed Sep 7, 2007 at Rev. 21)

	* taxondive: Fixed dimension checking, matching names and
	non-unique taxon names.
	
Version 1.10-0 (Sep 6, 2007)

	* Moved vegan_1.8-7 (CRAN release) into R-Forge.R-Project.org and
	Subversion SCM. This ChangeLog will only contain most important
	news (and should be renamed to NEWS), and the real ChangeLogs are
	created by the SCM.  The revisions will be numbered as 1.10-1 to
	1.10-x, and the next release will be 1.11-0.

VEGAN RELEASE VERSIONS at http://cran.r-project.org/
	
Version 1.8-7 (August 24, 2007)

	* Based on devel version 1.9-34.

	* DESCRIPTION: M. Henry H. Stevens (Miami University, Oxford,
	Ohio) joined the vegan team.
	